--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "lucide-react": "^0.462.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.7.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
