--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,4 @@
 PORT=3001
 MONGODB_URI=mongodb+srv://test1:test1@cluster0.kjvkjbb.mongodb.net/le7ad_ma_ne5tar_esm?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=ketf
+CLIENT_ORIGIN=http://localhost:8080
