--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "dev:mern": "concurrently -n web,api -c auto \"vite\" \"npm:server\"",
+  "dev:local": "cross-env USE_MEMORY_DB=1 concurrently -n web,api -c auto \"vite\" \"npm:server\"",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
@@ -71,6 +72,7 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+  "cross-env": "^7.0.3",
     "@eslint/js": "^9.32.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.16.5",
